Revision history for WWW::Mechanize

{{$NEXT}}
    - Add redirects() as a short to HTTP::Response->redirects (GH#116) (Julien Fiegehenn)

2.01      2020-09-18 17:51:10Z
    - Add rel filter to find_link() (GH#305) (Julien Fiegehenn)
    - Fix typos (GH#304) (Ferenc Erki)

2.00      2020-06-09 19:09:53Z
    - Require LWP::UserAgent 6.45 (GH#302) (Shoichi Kaji)

1.99      2020-06-08 15:35:04Z
    - Bump HTTP::Daemon test dependency to 6.12 (GH#300) (Olaf Alders)

1.98      2020-05-25 17:06:47Z (TRIAL RELEASE)
    - Don't make assumptions about port 80 in test (GH#299) (Olaf Alders)

1.97      2020-05-14 00:46:53Z
    - Respect CDATA[[ sections when parsing HTML (GH#298) (Max Maischein)
    - extract image links also from css (GH#12) (Jozef Kutej) and (GH#297)
      (Julien Fiegehenn)
    - s/parm/param/ in documentation (GH#295) (Olaf Alders)

1.96      2020-02-21 02:23:40Z [FIXED]
    - HTML::Form::find_input() has a 1-based index (GH#293) (Olaf Alders)
    - Fix invocation of dump_forms in mech-dump (GH#288) (積丹尼 Dan Jacobson)
    - make xt/author/eol.t pass (GH#291) (Shoichi Kaji)
    [DOCUMENTATION]
    - Fix documentation of use of undef in form_with() and all_forms_with()
      (GH#289) (積丹尼 Dan Jacobson)

1.95      2019-10-28 13:07:45Z
    [FIXED]
    - die if submit_form() called with invalid form_id (GH#287) (Olaf Alders)

1.94      2019-10-10 13:12:28Z
    [FIXED]
    - Issue #182: Don't autocheck for mech-dump so basic auth works (GH#285)
      (Julien Fiegehenn)

    [DOCUMENTATION]
    - Fix pod error reported by CPANTS. (GH#284) (Mohammad S Anwar)

1.93      2019-10-04 21:06:49Z
    [FIXED]
    - Allow images to not have a src attribute (GH#282) (Julien Fiegehenn)

    [DOCUMENTATION]
    - Pod fixes. (GH#283) (Mohammad S Anwar)

1.92      2019-08-24 01:00:35Z
    [FIXED]
    - Test requires HTTP::Daemon 6.05+ and uses 127.0.0.1 or [::1] according to
      server's sockdomain (GH#280) (Shoichi Kaji)